--- a/activities.html
+++ b/activities.html
@@ -13,7 +13,7 @@
 <h1>Leadership Development</h1>
 </div>
 <ul>
-<li><p>Students&rsquo; Union, Zhi Xin College, SUSTech, Oct. 2020 - Sept. 2021 <br />
+<li><p>Students&rsquo; Union, Zhi Xin College, SUSTech, Oct. 2020 - Sep. 2021 <br />
 Member of Presidium <br />
 Formulated organizational constitution and regulation.<br />
 Organized freshman gala and held cultural and recreational activities.<br /></p>
@@ -23,12 +23,12 @@ Organized freshman gala and held cultural and recreational activities.<br /></p>
 <li><p>Mentor of Freshmen, Zhi Xin College, SUSTech, Aug. 2020 - Present <br />
 Help freshmen adapt to college life.<br />
 Guide them to choose a major.<br />
-Listen to their troubles and tried my best to help them</p>
+Listen to their troubles and tried my best to help them.</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-17 12:51:10 太平洋标准时间, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-18 10:48:09 太平洋标准时间, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
