--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@ E-mail: <i>yanglt</i> [@] berkeley [DOT] edu</p>
 </td></tr></table>
 <h2>About me</h2>
 <ul>
-<li><p>Studying for a B.S. at SUSTech, under the supervision of <a href="https://faculty.sustech.edu.cn/shaoqm/en/">Prof. Qiman Shao</a> and <a href="https://faculty.sustech.edu.cn/xiongj/en/">Prof. Jie Xiong</a>, with expected graduation in July, 2023.<br />
-GPA: 3.77<i></i>4.00, Rank:8<i></i>47; Major GPA: 3.84/4.00. <br />
-Scholarships:
-First Class of the Merit Student Scholarship for Exceptional Performance of SUSTech, 2020 &amp; 2021 <br />
-Major Courses:
-Statistical Linear Model, Computational Statistics, Real Analysis, Time Series Analysis, Applied Stochastic Processes, Mathematical Statistics, Probability Theory, Statistical Computation and Software (R).<br /></p>
+<li><p>Studying for a B.S. at SUSTech, under the supervision of <a href="https://faculty.sustech.edu.cn/shaoqm/en/">Prof. Qiman Shao</a> and <a href="https://faculty.sustech.edu.cn/xiongj/en/">Prof. Jie Xiong</a>, with expected graduation in Jun. 2023.<br /></p>
+<ul>
+<li><p>GPA: 3.77/4.00, Rank:8/47; Major GPA: 3.84/4.00. <br /></p>
 </li>
-<li><p>Visiting student at UC Berkeley, Jan, 2022 - May, 2022.</p>
+<li><p>Scholarships: First Class of the Merit Student Scholarship for Exceptional Performance of SUSTech, 2020 &amp; 2021 <br /></p>
+</li>
+<li><p>Major Courses: Statistical Linear Model, Computational Statistics, Real Analysis, Time Series Analysis, Applied Stochastic Processes, Mathematical Statistics, Probability Theory, Statistical Computation and Software (R).<br /></p>
+</li></ul>
+</li>
+<li><p>Visiting student at UC Berkeley, Jan. 2022 - May. 2022.</p>
 </li>
 </ul>
 <h2>Research</h2>
 <p>My research interests include </p>
 <ul>
 <li><p>Biostatistics</p>
-</li>
-<li><p>Machine Learning</p>
 </li>
 </ul>
 <h2>Program Experience</h2>
