--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 <a href="https://stat-ds.sustech.edu.cn/?lang=en-us">Department of Statistics and Data Science</a>, <br />
 <a href="http://www.sustech.edu.cn/">Southern University of Science and Technology (SUSTech)</a>, <br />
 Phone: +1 510 345 8558 <br />
-E-mail: <i>yanglt</i> [@] berkeley [DOT] edu</p>
+E-mail: <a href="mailto:yanglt@berkeley.edu">yanglt@berkeley.edu</a> or <a href="mailto:11910435@mail.sustech.edu.cn">11910435@mail.sustech.edu.cn</a></p>
 </td></tr></table>
 <h2>About me</h2>
 <ul>
-<li><p>Studying for a B.S. at SUSTech, under the supervision of <a href="https://faculty.sustech.edu.cn/shaoqm/en/">Prof. Qiman Shao</a> and <a href="https://faculty.sustech.edu.cn/xiongj/en/">Prof. Jie Xiong</a>, with expected graduation in Jun. 2023.<br /></p>
+<li><p>Studying for a B.S. at SUSTech(Shenzhen, Guangdong, China), under the supervision of <a href="https://faculty.sustech.edu.cn/shaoqm/en/">Prof. Qiman Shao</a> and <a href="https://faculty.sustech.edu.cn/xiongj/en/">Prof. Jie Xiong</a>, with expected graduation in Jun. 2023.<br /></p>
 <ul>
 <li><p>GPA: 3.77/4.00, Rank:8/47; Major GPA: 3.84/4.00. <br /></p>
 </li>
@@ -39,7 +39,7 @@ E-mail: <i>yanglt</i> [@] berkeley [DOT] edu</p>
 <li><p>Major Courses: Statistical Linear Model, Computational Statistics, Real Analysis, Time Series Analysis, Applied Stochastic Processes, Mathematical Statistics, Probability Theory, Statistical Computation and Software (R).<br /></p>
 </li></ul>
 </li>
-<li><p>Visiting student at UC Berkeley, Jan. 2022 - May. 2022.</p>
+<li><p>Visiting student at UC Berkeley, Jan. 2022 - Present.</p>
 </li>
 </ul>
 <h2>Research</h2>
