--- a/courses.html
+++ b/courses.html
@@ -24,7 +24,7 @@
 &lt;Rice, J.A., Mathematical Statistics and Data Analysis, 3rd Ed, Duxbury Press, 2007, ISBN 0-534-39942-8.&gt; <br />
 &lt;Chapter1-6&gt;</p>
 </li>
-<li><p>Mathematical statistics 
+<li><p>Mathematical statistics <br />
 &lt;Guoliang Tian, Xuejun Jiang(2021). Mathematical Statistics. Science Press, Beijing&gt; <br />
 &lt;full book&gt;</p>
 </li>
@@ -33,7 +33,7 @@
 &lt;full book&gt;</p>
 </li>
 <li><p>Computational statistics <br />
-&lt;no single textbook: <a href="1">1</a> Tan, M., Tian, G.L. and Ng, K.W. (2010). Bayesian Missing Data Problems: EM, Data Augmentation and Non-iterative Computation. Chapman &amp; Hall/CRC, Boca Raton. <a href="2">2</a> Givens, G.H. and Hoeting, J.A. (2013). Computational Statistics (2 nd Ed.) Wiley, New York. <a href="3">3</a> Gentle, J.E. (2009). Computational Statistics (Statistics and Computing Series) Springer, New York.&gt; <br />
+&lt;no single textbook: Tan, M., Tian, G.L. and Ng, K.W. (2010). Bayesian Missing Data Problems: EM, Data Augmentation and Non-iterative Computation. Chapman &amp; Hall/CRC, Boca Raton; Givens, G.H. and Hoeting, J.A. (2013). Computational Statistics (2 nd Ed.) Wiley, New York; Gentle, J.E. (2009). Computational Statistics (Statistics and Computing Series) Springer, New York.&gt; <br />
 &lt;Main content: generation of random variables, optimization, integration, Markov chain monte Carlo methods, bootstrap methods&gt;,</p>
 </li>
 <li><p>Statistical linear models <br />
@@ -45,7 +45,7 @@
 &lt;Chapter 1-12&gt;</p>
 </li>
 <li><p>Statistical Computation and Software <br />
-&lt;no single textbook: <a href="1">1</a> Hothorn, Torsten, and Brian S. Everitt. A handbook of statistical analyses using R. Chapman and Hall/CRC, 2014. <a href="2">2</a> Robert I. Kabacoff. R in action: Data analysis and graphics with R. Shelter Island: Manning, 2011. <a href="3">3</a> Kuhn, Max, and Kjell Johnson. Applied predictive modeling. Vol. 26. New York: Springer, 2013.&gt;<br />
+&lt;no single textbook: Hothorn, Torsten, and Brian S. Everitt. A handbook of statistical analyses using R. Chapman and Hall/CRC, 2014; Robert I. Kabacoff. R in action: Data analysis and graphics with R. Shelter Island: Manning, 2011; Kuhn, Max, and Kjell Johnson. Applied predictive modeling. Vol. 26. New York: Springer, 2013.&gt;<br />
 &lt;Main Content: R basics, hypothesis testing, regression analysis, nonparametric methods with R, ANOVA with R, resampling and bootstrapping, clustering, classification&gt;</p>
 </li>
 </ol>
@@ -92,7 +92,7 @@
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-17 12:45:17 太平洋标准时间, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-18 11:10:34 太平洋标准时间, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </div>
