--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 <a href="https://stat-ds.sustech.edu.cn/?lang=en-us">Department of Statistics and Data Science</a>, <br />
 <a href="http://www.sustech.edu.cn/">Southern University of Science and Technology (SUSTech)</a>, <br />
 Phone: +1 510 345 8558 <br />
-E-mail: <a href="mailto:yanglt@berkeley.edu">yanglt@berkeley.edu</a> or <a href="mailto:11910435@mail.sustech.edu.cn">11910435@mail.sustech.edu.cn</a></p>
+E-mail: <a href="mailto:yanglt@berkeley.edu">yanglt@berkeley.edu</a> or <a href="mailto:11910435@mail.sustech.edu.cn">11910435@mail.sustech.edu.cn</a> <br /></p>
+<p><br />
+<a href="Resume_SUSTechylt_summer.pdf">A brief cv</a><br />
+<a href="transcript.pdf">Transcript(with major courses highlighted)</a></p>
 </td></tr></table>
 <h2>About me</h2>
 <ul>
@@ -68,8 +71,6 @@ Study the effect of education on finding a job; explores cities that are more co
 <a href="Report__g15.pdf">Project report</a></p>
 </li>
 </ol>
-<p><br />
-<a href="Resume_SUSTechylt_summer.pdf">A brief cv</a></p>
 </td>
 </tr>
 </table>
